# nlpFaker

./: .gitignore  README.md  pyproject.toml  setup.py  test.py
.github/workflows/: ci.yml  publish.yml
nlpFaker/: __init__.py  _base.py  address.py  bank_account.py  cli.py  company.py  credential.py  credit_card.py  datetime_gen.py  email.py  export.py  faker.py  id_number.py  invoice.py  job.py  landline.py  license_plate.py  mobile.py  name.py  tax_id.py  validators.py
nlpFaker/raw_data/: address.csv
nlpFaker/src/: address.py  id_number.py  name.py
src/: mobile.py
test/: id_number.py
tests/: address.py  conftest.py  mobile.py  name.py  test_address.py  test_bank_account.py  test_cli.py  test_company.py  test_credential.py  test_credit_card.py  test_datetime.py  test_email.py  test_export.py  test_faker.py  test_id_number.py  test_invoice.py  test_job.py  test_landline.py  test_license_plate.py  test_mobile.py  test_name.py  test_profile.py  test_tax_id.py  test_validators.py
