[project]
name = "nlpFaker"
version = "2.0.0"
description = "Comprehensive fake data generator for Taiwanese (zh_TW) data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Daniel Du", email = "danghoangnhan.1@gmail.com" }]
keywords = ["faker", "taiwan", "zh_TW", "nlp", "data-generation"]
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
nlpfaker = "nlpFaker.cli:main"

[dependency-groups]
dev = ["pytest>=7.0", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nlpFaker"]

[tool.hatch.build.targets.wheel.force-include]
"nlpFaker/raw_data" = "nlpFaker/raw_data"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
